--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="top">
                     <div class="logo">
-                        <a href="home.html">
+                        <a href="home.html">>
                             <img src="logo.png" alt="Logo">
                         </a>
                     </div>
